Edited wiki page HowToCompile through web user interface.

--- a/wiki/HowToCompile.wiki
+++ b/wiki/HowToCompile.wiki
@@ -13,7 +13,7 @@ If you compiled Pidgin from source, the following will suffice to compile this p
 
 If you didn't compile Pidgin from source, you will get errors while compiling the GUIOps plugin. To solve this, install the packages
 
-* pidgin-dev
+* pidgin-dev (thanks tolean.dj)
 * purple-dev
 
 and compile again.
