--- a/wiki/HowToCompile.wiki
+++ b/wiki/HowToCompile.wiki
@@ -11,9 +11,9 @@ If you compiled Pidgin from source, the following will suffice to compile this p
   * you should then get a file pidgin-guiops.so
   * copy pidgin-guiops.so to your ~/.purple/plugins directory
 
-If you didn't compile Pidgin from source, you will get errors while compiling the GUIOps plugin. To solve this, install the packages
+If you didn't compile Pidgin from source, you will get errors while compiling the GUIOps plugin. To solve this, install the packages (thanks tolean.dj, craigwharding):
 
- * pidgin-dev (thanks tolean.dj)
+ * pidgin-dev
  * libpurple-dev
 
 and compile again.
